<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blanco" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal|center_vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/alturaboton"
            android:background="@drawable/miboton"
            android:textColor="@color/blanco"
            android:textSize="@dimen/textoescaneoqr"
            android:text="@string/playdescripcion" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alturaboton"
            android:background="@drawable/miboton"
            android:textSize="@dimen/textoescaneoqr"
            android:textColor="@color/blanco"
            android:text="@string/ira" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margentitulo"
        android:layout_marginLeft="@dimen/margentitulo"
        android:layout_marginRight="@dimen/margentitulo"
        android:layout_marginTop="@dimen/margentitulo"
        style="@style/titulo_principal"
        android:gravity="center_horizontal"
        android:text="@string/descripcion"
        android:textColor="@color/blanco"
        android:textSize="@dimen/textoestasaqui"
        android:textStyle="bold" />

    <VideoView
        android:id="@+id/videoView1"
        android:layout_width="@dimen/videoanchovertical"
        android:layout_height="@dimen/videoaltovertical"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>