<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SeleccionaCanal" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout2"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/anchuraboton"
            android:layout_height="@dimen/alturaboton"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.65"
            android:layout_marginRight="@dimen/margentitulo"
            android:background="@drawable/miboton2"
            android:text="@string/perfil"
            android:textColor="@color/blanco"
            android:textSize="@dimen/textoescaneoqr"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/alturaboton"
            android:layout_marginRight="@dimen/margentitulo"
            android:background="@drawable/miboton2"
            android:layout_weight="0.35"
            android:text="@string/inicio"
            android:textColor="@color/blanco"
            android:textSize="@dimen/textoescaneoqr"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ugr"
            android:textColor="@color/azulclaro"
            android:textSize="@dimen/tituloprincipal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qr"
            android:textColor="@color/grisoscuro"
            android:textSize="@dimen/tituloprincipal"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/escudougr"
        android:layout_height="@dimen/escudougr"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:src="@drawable/ugr" />

</RelativeLayout>