<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blanco" >

    <TextView
        android:id="@+id/textView2"
        android:background="@color/azul_tit_estasen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bienvenido"
        android:textColor="@color/blanco"
        android:textSize="@dimen/textoestasaqui"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginBottom="22dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/alturaboton"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/miboton2"
                android:text="@string/masinfo"
                android:textColor="@color/blanco"
                android:textSize="@dimen/textoescaneoqr"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/alturaboton"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/miboton2"
                android:text="@string/ira"
                android:textColor="@color/blanco"
                android:textSize="@dimen/textoescaneoqr"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/alturaboton"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/miboton2"
                android:text="@string/cambiaconc"
                android:textColor="@color/blanco"
                android:textSize="@dimen/textoescaneoqr"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/alturaboton"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/miboton2"
                android:text="@string/captura"
                android:textColor="@color/blanco"
                android:textSize="@dimen/textoescaneoqr"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TabHost
        android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tableLayout1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaboton">
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical" >
                    
                    <TextView
				        android:id="@+id/textView3"
				        android:layout_width="match_parent"
				        android:layout_height="match_parent"
				        android:background="@color/blanco"
				        android:padding="5dp"
				        android:gravity="center_horizontal|center_vertical"
				        android:scrollbars="vertical"
				        android:textIsSelectable="false"
				        android:textSize="@dimen/textoresyddeta"
				        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>